Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -21,7 +21,7 @@
                         </label>
 
                         <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft"
+                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressStreet}"
                                      placeholder="Street Address 1"
                                      required="false">
@@ -105,7 +105,7 @@
                         </label>
 
                         <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft"
+                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
                                      placeholder="Street Address 1">
                         </p:inputText>
@@ -193,7 +193,7 @@
                         </label>
 
                         <div class="EmptyBox5"></div>
-                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft"
+                        <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressStreet}"
                                      placeholder="Street Address 1">
                         </p:inputText>
@@ -275,7 +275,7 @@
                                 Address</label>
 
                             <div class="EmptyBox5"></div>
-                            <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft"
+                            <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                          value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressStreet}"
                                          placeholder="Street Address 1">
                             </p:inputText>
