Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -87,7 +87,7 @@
 
 
             </p:panel>
-            <p:panel id="ownermailaddressPanel" style="border: 0px; background: transparent; margin-top: -10px;">
+            <p:panel id="ownermailaddressPanel" style="border: 0px; background: transparent; margin-top: -10px;" styleClass="Container80 Responsive100 MarTop5 MarCenter">
                 <div class="Container100">
                     <p:selectBooleanCheckbox value="#{tdcto.tdMasterData.acctholderhasMailing}"
                                              itemLabel="Different Mailing Address">
