TD CTO Version 1.23 - Revised 9/18/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
@@ -58,7 +58,7 @@
 
                                 <f:facet name="footer">
                                     <div class="Container100" style="text-align: center;">
-                                        <p:commandButton value="Register" type="submit"
+                                        <p:commandButton value="Open Account" type="submit"
                                                          update="@form, signmsg"
                                                          actionListener="#{userBean.simpleSignup}"/>
                                     </div>
