--- a/tcm/modules/web/src/main/webapp/signup4.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup4.xhtml
@@ -22,21 +22,13 @@
                         <div class="ContainerIndent">
 
                             <h3>
-                                Your account is now active. We are sending confirmation message with your userID.
-                                Please keep that for your record.  You will need your userid to access this portal.
+                                Your account is now active. You may now logon.
                             </h3>
                             <br/>
 
-                            <p>
-                                If you can't find the confirmation email, please check your spam/junk folder and add
-                                <a href="#{uiLayout.uiprofile.securehomepage}">#{uiLayout.uiprofile.securehomepage}</a> as a trusted site.
-                            </p>
                         </div>
                         <div class="EmptyBox20"></div>
                         <p:button  value="Logon" styleClass="Fs16 BlueButton" href="/login.xhtml"/>
-                        <div class="EmptyBox20"></div>
-                        <p:commandButton  value="Resend confirmation" styleClass="Fs16 OrangeButton"
-                                   actionListener="#{userBean.sendConfirmation}"/>
                         <div class="EmptyBox50"></div>
 
                     </h:form>
