--- a/tcm/modules/web/src/main/webapp/forgot.xhtml
+++ b/tcm/modules/web/src/main/webapp/forgot.xhtml
@@ -28,10 +28,13 @@
                                         <p:panelGrid columns="1" layout="grid"
                                                      style="border:0px !important; padding: 5px !important; background:none;" class="FormContent">
                                             <p:messages id="messages" autoUpdate="true" styleClass="Wid90"/>
-                                            <p:inputText id="userID" placeholder="User ID" styleClass="Container80 Fnone MarAuto Fs18"
-                                                         required="true" requiredMessage="Please enter User ID."
-                                                         value="#{userBean.beanUserID}">
-                                                <p:watermark value="User ID" for="userID"/>
+                                            <p:inputText id="email" placeholder="Email Address"
+                                                         styleClass="Container80 Fnone MarAuto Fs18"
+                                                         required="true" requiredMessage="Please enter Email Address."
+                                                         validatorMessage="Email format is not correct.">
+                                                <p:watermark for="email" value="Email Address"/>
+                                                <f:validator validatorId="EmailValidator"/>
+                                                         value="#{userBean.beanEmail}">
                                             </p:inputText>
                                         </p:panelGrid>
                                     </div>
@@ -40,7 +43,7 @@
                             <div class="EmptyBox30"></div>
                             <f:facet name="footer">
                                 <p:commandButton value="Send Email" type="submit" styleClass="Fs16 Blue Fright"
-                                                 actionListener="#{userBean.forgotPassword}"
+                                                 actionListener="#{userBean.sendResetEmail}"
                                                  update="p1"/>
                             </f:facet>
                         </p:panel>
