--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -5,7 +5,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <p:tabView id="fundTabV">
+    <p:tabView id="fundTabV" activeIndex="#{tdcto.subtab}">
 
         <p:tab title="Fund">
             <p:panel id="fundPanel" style="border: 0px; background: transparent">
@@ -410,10 +410,11 @@
                 <div class="Container100 MarTop20" style="margin: 10px 10px;">
                     <p:commandLink styleClass="UI-prevButtonFA Fleft"
                                    actionListener="#{tdcto.prevPage}"
-                                   process="@none"
+                                   process="@this"
                                    update="@form"/>
 
                     <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                                   rendered="#{tdcto.tdMasterData.recurringFlag}"
                                    actionListener="#{tdcto.nextPage}"
                                    process="@parent"
                                    update="@form"/>
@@ -567,9 +568,13 @@
                     </p:panel>
                 </div>
                 <div class="Container100 MarTop20" style="margin: 10px 10px;">
-                    <p:commandLink styleClass="UI-prevButtonFA Fleft"/>
+                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                                   actionListener="#{tdcto.prevPage}"
+                                   process="@this"
+                                   update="@form"/>
 
-                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"/>
+                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                            rendered="false"/>
                 </div>
             </p:panel>
 
