--- a/tcm/modules/web/src/main/webapp/signup2.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup2.xhtml
@@ -37,7 +37,7 @@
                                         <p:selectOneMenu id="q1" value="#{userBean.beanq1}"
                                                 required="true" requiredMessage="Please choose Question #1">
                                             <f:selectItem itemLabel="Select One" itemValue=""/>
-                                            <f:selectItems value="#{userBean.getQuestion(0).entrySet()}"
+                                            <f:selectItems value="#{userBean.userdata.getQuestion(0).entrySet()}"
                                                            var="q1" itemLabel="#{q1.value}"
                                                            itemValue="#{q1.value}"/>
                                         </p:selectOneMenu>
@@ -59,7 +59,7 @@
                                         <p:selectOneMenu id="q2" value="#{userBean.beanq2}"
                                                          required="true" requiredMessage="Please choose Question #2">
                                             <f:selectItem itemLabel="Choose Favorite" itemValue=""/>
-                                            <f:selectItems value="#{userBean.getQuestion(1).entrySet()}"
+                                            <f:selectItems value="#{userBean.userdata.getQuestion(1).entrySet()}"
                                                            var="q2" itemLabel="#{q2.value}"
                                                            itemValue="#{q2.value}"/>
                                         </p:selectOneMenu>
@@ -81,7 +81,7 @@
                                         <p:selectOneMenu id="q3" value="#{userBean.beanq3}"
                                                          required="true" requiredMessage="Please choose Question #3">
                                             <f:selectItem itemLabel="Describe" itemValue=""/>
-                                            <f:selectItems value="#{userBean.getQuestion(2).entrySet()}"
+                                            <f:selectItems value="#{userBean.userdata.getQuestion(2).entrySet()}"
                                                            var="q3" itemLabel="#{q3.value}"
                                                            itemValue="#{q3.value}"/>
                                         </p:selectOneMenu>
