--- a/tcm/modules/web/src/main/webapp/signup4.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup4.xhtml
@@ -7,13 +7,16 @@
 
     <ui:define name="content">
         <div id="layout-portlets-cover">
+         <div class="EmptyBox150"></div>
             <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form>
-                        <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
-                                        styleClass="Fleft" library="invessence"
-                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
+                       
+                        <div class="Container100 TexAlCenter">
+							<h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+								styleClass="" library="invessence" class="MarAuto MarTop20"
+								style="height: 50px" />
+						</div>
                         <div class="EmptyBox20"></div>
                         <div class="ContainerIndent">
                             <h2>Thanks</h2>
