--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -1,185 +1,206 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:pe="http://primefaces.org/ui/extensions">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <p:tabView id="regTabV">
+	<p:tabView id="regTabV">
 
-        <p:tab title="Primary Holder">
-            <div class="Container80 Responsive100 MarTop5 MarCenter"
-                 style="margin-bottom: 15px;">
+		<p:tab title="Primary Holder">
+			<div class="Container80 Responsive100 MarTop5 MarCenter"
+				style="margin-bottom: 15px;">
 
-                <label Class="Container100"
-                       style="text-align: left !important; font-weight: bold !important;">
-                    Regulatory Questions</label>
+				<label Class="Container100"
+					style="text-align: left !important; font-weight: bold !important;">
+					Regulatory Questions</label>
 
-                <div class="EmptyBox5"></div>
+				<div class="EmptyBox5"></div>
 
-                <p:panel id="ownerregspfPanel" style="border: 0px; background: transparent">
-                    <div class="Container100 CustomWidthFA2 MarTop5">
-                        <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox" value="#{tdcto.tdMasterData.ownerSPF}"
-                                                 itemLabel="I, my spouse or an immediate member of my family is a Senior Political Figure.">
-                            <p:ajax update=":ctoForm:tdaccordian:regTabV:ownerregspfPanel"/>
-                        </p:selectBooleanCheckbox>
-                    </div>
-
-
-                    <p:panel style="border: 0px; background: transparent"
-                             rendered="#{tdcto.tdMasterData.ownerSPF}">
-                        <div class="EmptyBox20"></div>
-                        <div class="Container100">
-                            <div class="Container45 Fleft CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Name
-                                    Of SPF</label>
-
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.spfName}"
-                                        styleClass="Wid100 CustomWidthFA-Responsive FS14"
-                                        placeholder="Name of SPF">
-                                </p:inputText>
-                            </div>
-                            <div
-                                    class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Relationship</label>
-
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.spfRelationship}"
-                                        styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                        placeholder="Relationship">
-                                </p:inputText>
-                            </div>
-                        </div>
-                        <div class="EmptyBox20"></div>
-                        <div class="Container100">
-                            <div class="Container45 Fleft CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Political
-                                    Title</label>
-
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.spfTitle}"
-                                        styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                        placeholder="Political Title">
-                                </p:inputText>
-                            </div>
-                            <div
-                                    class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Country
-                                    Of Office</label>
-
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.spfCountry}"
-                                        styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                        placeholder="Country Of Office">
-                                </p:inputText>
-                            </div>
-                        </div>
-                        <div class="EmptyBox20"></div>
-                    </p:panel>
-                </p:panel>
+				<p:panel id="ownerregspfPanel"
+					style="border: 0px; background: transparent">
+					<div class="Container100 CustomWidthFA2 MarTop5">
+						<p:selectBooleanCheckbox styleClass="RegulatoryCheckBox"
+							value="#{tdcto.tdMasterData.ownerSPF}"
+							itemLabel="I, my spouse or an immediate member of my family is a Senior Political Figure.">
+							<p:ajax update=":ctoForm:tdaccordian:regTabV:ownerregspfPanel" />
+						</p:selectBooleanCheckbox>
+					</div>
 
 
-                <p:panel id="ownerregsharePanel" style="border: 0px; background: transparent">
-                    <div class="Container100 CustomWidthFA2 MarTop5">
-                        <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox" value="#{tdcto.tdMasterData.ownerShare}"
-                                                 itemLabel="I, my spouse or an immediate member of my family is a director, 10% shareholder or policy maker of a publicly traded company.">
-                            <p:ajax update=":ctoForm:tdaccordian:regTabV:ownerregsharePanel"/>
-                        </p:selectBooleanCheckbox>
-                    </div>
+					<p:panel style="border: 0px; background: transparent"
+						rendered="#{tdcto.tdMasterData.ownerSPF}">
+						<div class="EmptyBox20"></div>
+						<div class="Container100">
+							<div class="Container45 Fleft CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Name
+									Of SPF</label>
 
-                    <p:panel style="border: 0px; background: transparent"
-                             rendered="#{tdcto.tdMasterData.ownerShare}">
-                        <div class="EmptyBox20"></div>
-                        <div class="Container100">
-                            <div class="Container45 Fleft CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Company
-                                    Name</label>
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.spfName}"
+									styleClass="Wid100 CustomWidthFA-Responsive FS14"
+									placeholder="Name of SPF">
+								</p:inputText>
+							</div>
+							<div
+								class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Relationship</label>
 
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderCompany}"
-                                        styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                        placeholder="Company Name">
-                                </p:inputText>
-                            </div>
-                            <div
-                                    class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">Company
-                                    Address</label>
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.spfRelationship}"
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="Relationship">
+								</p:inputText>
+							</div>
+						</div>
+						<div class="EmptyBox20"></div>
+						<div class="Container100">
+							<div class="Container45 Fleft CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Political
+									Title</label>
 
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderAddress}"
-                                        styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                        placeholder="Company Address">
-                                </p:inputText>
-                            </div>
-                        </div>
-                        <div class="EmptyBox20"></div>
-                        <div class="Container100">
-                            <div class="Container45 Fleft CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">City</label>
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.spfTitle}"
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="Political Title">
+								</p:inputText>
+							</div>
+							<div
+								class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Country
+									Of Office</label>
 
-                                <div class="EmptyBox5"></div>
-                                <p:inputText
-                                        value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderCity}"
-                                        styleClass="Wid100 FS14 CustomWidthFA-Responsive"
-                                        placeholder="City">
-                                </p:inputText>
-                            </div>
-                            <div
-                                    class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
-                                <label Class="Container100"
-                                       style="text-align: left !important; font-weight: bold !important;">State</label>
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.spfCountry}"
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="Country Of Office">
+								</p:inputText>
+							</div>
+						</div>
+						<div class="EmptyBox20"></div>
+					</p:panel>
+				</p:panel>
 
-                                <div class="EmptyBox5"></div>
-                                <p:selectOneMenu value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderState}"
-                                                 styleClass="FundAccountDropdownUI formpageDropdown"
-                                                 style="width: 100%;">
-                                    <p:ajax/>
-                                    <f:selectItem itemLabel="Select State" itemValue=""
-                                                  noSelectionOption="true"/>
-                                    <f:selectItems value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
-                                                   var="ownerregshare" itemLabel="#{ownerregshare.value}" itemValue="#{ownerregshare.key}"/>
-                                </p:selectOneMenu>
-                            </div>
-                        </div>
-                        <div class="EmptyBox20"></div>
-                    </p:panel>
-                </p:panel>
-                <p:panel id="unusedID" style="border: 0px; background: transparent">
-                    <div class="Container100 CustomWidthFA2 MarTop5">
-                        <p:selectBooleanCheckbox styleClass="RegulatoryCheckBox" value="#{tdcto.tdMasterData.ownerBD}"
-                                                 itemLabel="I, my spouse or an immediate member of my family is a licensed, employed by or associated with a broker-dealer firm, a financial services regulator, securities exchange, or a member of a securities exchange.">
-                        </p:selectBooleanCheckbox>
-                    </div>
-                </p:panel>
-            </div>
-            <div class="Container100 MarTop20" style="margin: 10px 10px;">
-                <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                               actionListener="#{tdcto.prevPage}"
-                               update="@form"/>
 
-                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                               actionListener="#{tdcto.nextPage}"
-                               update="@form"/>
-            </div>
-        </p:tab>
-        <p:tab title="Joint Holder" disabled="true" rendered="false">
-        </p:tab>
+				<p:panel id="ownerregsharePanel"
+					style="border: 0px; background: transparent">
+					<div class="Container100 CustomWidthFA2 MarTop5">
+						<p:selectBooleanCheckbox styleClass="RegulatoryCheckBox"
+							value="#{tdcto.tdMasterData.ownerShare}"
+							itemLabel="I, my spouse or an immediate member of my family is a director, 10% shareholder or policy maker of a publicly traded company.">
+							<p:ajax update=":ctoForm:tdaccordian:regTabV:ownerregsharePanel" />
+						</p:selectBooleanCheckbox>
+					</div>
 
-    </p:tabView>
+					<p:panel style="border: 0px; background: transparent"
+						rendered="#{tdcto.tdMasterData.ownerShare}">
+						<div class="EmptyBox20"></div>
+						<div class="Container100">
+							<div class="Container45 Fleft CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Company
+									Name</label>
+
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderCompany}"
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="Company Name">
+								</p:inputText>
+							</div>
+							<div
+								class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Company
+									Address</label>
+
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderAddress}"
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="Company Address">
+								</p:inputText>
+							</div>
+						</div>
+						<div class="EmptyBox20"></div>
+						<div class="Container100">
+							<div class="Container45 Fleft CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">City</label>
+
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderCity}"
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="City">
+								</p:inputText>
+							</div>
+							<div
+								class="Container45 Fright-FAAddress CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">State</label>
+
+								<div class="EmptyBox5"></div>
+								<p:selectOneMenu
+									value="#{tdcto.tdMasterData.acctOwnersDetail.shareholderState}"
+									styleClass="FundAccountDropdownUI formpageDropdown"
+									style="width: 100%;">
+									<p:ajax />
+									<f:selectItem itemLabel="Select State" itemValue=""
+										noSelectionOption="true" />
+									<f:selectItems
+										value="#{tdcto.tdMasterData.usmaps.states.entrySet()}"
+										var="ownerregshare" itemLabel="#{ownerregshare.value}"
+										itemValue="#{ownerregshare.key}" />
+								</p:selectOneMenu>
+							</div>
+						</div>
+						<div class="EmptyBox20"></div>
+					</p:panel>
+				</p:panel>
+				<p:panel id="unusedID" style="border: 0px; background: transparent">
+					<div class="Container100 CustomWidthFA2 MarTop5">
+						<p:selectBooleanCheckbox styleClass="RegulatoryCheckBox"
+							value="#{tdcto.tdMasterData.ownerBD}"
+							itemLabel="I, my spouse or an immediate member of my family is a licensed, employed by or associated with a broker-dealer firm, a financial services regulator, securities exchange, or a member of a securities exchange. (Please provide a copy of the required authorization letter)">
+						</p:selectBooleanCheckbox>
+					</div>
+					<div class="EmptyBox20"></div>
+					<div class="Container100">
+							<div class="Container45 Fleft CustomWidthFA-Responsive">
+								<label Class="Container100"
+									style="text-align: left !important; font-weight: bold !important;">Entity</label>
+
+								<div class="EmptyBox5"></div>
+								<p:inputText
+									
+									styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+									placeholder="Entity">
+								</p:inputText>
+							</div>
+							</div>
+							<div class="Container100 MarTop20" style="margin: 10px 10px;">
+				<p:commandLink styleClass="UI-prevButtonFA Fleft"
+					actionListener="#{tdcto.prevPage}" update="@form" />
+
+				<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+					actionListener="#{tdcto.nextPage}" update="@form" />
+			</div>
+				</p:panel>
+			</div>
+			
+		</p:tab>
+		<p:tab title="Joint Holder" disabled="true" rendered="false">
+		</p:tab>
+
+	</p:tabView>
 
 </ui:composition>
