--- a/tcm/modules/web/src/main/webapp/signup2.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup2.xhtml
@@ -33,7 +33,8 @@
 									<h:outputText
 										value="Please choose security questions and type your answers below." />
 								</div>
-								<div class="EmptyBox5"></div>
+								<div class="EmptyBox20"></div>
+								<label class="sigupLabel">Security Question 1</label>
 								<div class="Container100">
 
 									<p:selectOneMenu id="q1" value="#{userBean.beanq1}"
@@ -55,7 +56,7 @@
 
 								</div>
 								<div class="EmptyBox20"></div>
-
+<label class="sigupLabel">Security Question 2</label>
 								<div class="Container100">
 									<p:selectOneMenu id="q2" value="#{userBean.beanq2}"
 										styleClass="selectBG formpageDropdown FundAccountDropdownUI"
@@ -76,6 +77,7 @@
 								</div>
 
 								<div class="EmptyBox20"></div>
+								<label class="sigupLabel">Security Question 3</label>
 								<div class="Container100">
 
 									<p:selectOneMenu
@@ -108,7 +110,7 @@
 								</div>
 							</p:panel>
 						</div>
-
+<div class="EmptyBox10"></div>
 					</h:form>
 				</div>
 			</div>
